# ocr

./: .env.example  .gitattributes  .gitignore  INTEGRATION_CHECKLIST.md  README.md  SETUP_SUMMARY.md  SONARQUBE_ANALYSIS_REPORT.md  deploy_jarvis.sh  download_models.py  pyproject.toml  remember.md  sonar-project.properties
.github/workflows/: ci.yml  sonarqube.yml
config/: logging.py  settings.py
infra/: SONARQUBE_LOCAL.md  docker-compose.yml  prometheus.yml
infra/docker/: Dockerfile.embed  Dockerfile.graph  Dockerfile.ocr  Dockerfile.pipeline
infra/postgres/: create_dbs.sh  init.sql
jarvis_services/: chandra_server.py  embed_server.py  graph_server.py  requirements.txt  startup.sh
migrations/: env.py
observability/: alerts.py  metrics.py  tracing.py
pipeline/flows/: batch_ingest.py
pipeline/providers/: base.py  factory.py  jarvis.py  self_hosted.py
pipeline/tasks/: chunker.py  discovery.py  embed_client.py  jarvis_ops.py  neo4j_writer.py  ocr_client.py  state.py  storage_ops.py
query_api/: main.py
query_api/routes/: graph_search.py  hybrid.py  search.py
scripts/: monitor_optimization.sh  optimize_pipeline.py  test_optimization.py
tests/: conftest.py
tests/integration/: conftest.py  test_batch_ingest_flow.py  test_embed_client_qdrant.py  test_neo4j_writer_real.py  test_state_postgres.py  test_storage_ops_minio.py
tests/unit/: test_batch_ingest.py  test_chunker.py  test_discovery.py  test_embed_client.py  test_jarvis_ops.py  test_neo4j_writer.py  test_ocr_client.py  test_provider_factory.py  test_providers.py  test_settings_and_logging.py  test_state.py
