[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-pipeline"
version = "0.1.0"
description = "Production-grade document ingestion pipeline: OCR → vector + knowledge graph"
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "prefect>=3.0",
    "prefect-aws>=0.5",

    # State tracking
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Storage abstraction
    "fsspec>=2024.0",
    "s3fs>=2024.0",       # S3 + MinIO
    "gcsfs>=2024.0",      # GCS (optional)
    "adlfs>=2024.0",      # Azure Blob (optional)

    # AWS / MinIO client
    "boto3>=1.34",
    "botocore>=1.34",

    # Markdown chunking
    "markdown-it-py>=3.0",
    "spacy>=3.7",

    # Vector DB client
    "qdrant-client>=1.9",

    # Graph DB client
    "neo4j>=5.19",

    # HTTP clients (for JarvisLabs service calls)
    "httpx>=0.27",
    "tenacity>=8.2",
    "stamina>=24.0",

    # Config
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",

    # Observability
    "structlog>=24.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-httpx>=0.45",
    "opentelemetry-instrumentation-sqlalchemy>=0.45",
    "prometheus-client>=0.20",
    "loki-logger-handler>=1.0",
]

[project.optional-dependencies]
# Only installed on the JarvisLabs GPU node
jarvis = [
    "torch>=2.3",
    "torchvision>=0.18",
    "transformers>=4.41",
    "FlagEmbedding>=1.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "lightrag-hku>=1.0",
    "vllm>=0.5",
    "chandra-ocr>=0.1",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "bandit[toml]>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "observability", "pipeline", "query_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires docker-compose services (postgres, neo4j, qdrant, minio)",
]
